Fixed projectWrapper text from wrapping +styling

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -27,7 +27,7 @@ h2 {
   position: relative;
   font-family: "Prompt";
   border-radius: 1%;
-  color: #001220;
+  color: #ffffff;
   transform: scale(0.7);
   padding: 1.5vw;
   font-size: clamp(0.9rem, 2rem, 5rem);
@@ -175,15 +175,15 @@ a:active {
 }
 .time {
   letter-spacing: 0.05vw;
-  font-size: 2vw;
+  font-size: 2.25vw;
 }
 .date {
   letter-spacing: 0.05vw;
-  font-size: 1.25vw;
+  font-size: 1.5vw;
 }
 .text {
   letter-spacing: 0.05vw;
-  font-size: 1.25vw;
+  font-size: 1.5vw;
 }
 
 .float-container {
@@ -213,9 +213,9 @@ a:active {
 }
 /* Project Section */
 #projectWrapper {
-  color: #001220;
-  padding: 1vh;
-  font-size: clamp(1rem, 2vh, 4rem);
+  color: #ffffff;
+  padding: 1.25vh;
+  white-space: nowrap;
 }
 #projectWrapper:hover {
   color: #ffff;
@@ -230,11 +230,12 @@ a:active {
 }
 
 .scrollMyProjects {
-  background-color: rgba(255, 255, 255, 0.15);
+  background-color: rgba(112, 103, 103, 0.25);
   backdrop-filter: blur(5px);
   padding: 0.5%;
   font-size: clamp(1.5rem, 3vw, 3rem);
   font-weight: bold;
+  width: auto;
 }
 
 /* Carousel */
