--- a/styles/topNav.css
+++ b/styles/topNav.css
@@ -306,5 +306,6 @@ a {
 .flex {
   display: flex;
   margin-top: min(17vw);
+  margin-bottom: clamp(10vh, 17vh, 20vh);
   z-index: -1000;
 }
